Updated website info.

--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
 
 									<h2><a href="#">About me<br />
 									</a></h2>
-									<p>I was a student researcher who received a scholarship to study at Soonchunhyang University (South-Korea) in the Department of ICT Convergence. 
-									During two years of my master's degree, I have spent most of my time doing projects related to data analysis, data visualization, and machine learning.
+									<p>I was a student researcher who received a scholarship to study at Soonchunhyang University (South Korea) in the Department of ICT Convergence. During two years of my master's degree, I have spent most of my time doing projects related to data analysis, data visualization, machine learning, and review scientific journal papers.
 									</p>
 								</header>
 								<a href="#" class="image main"><img src="images/me.jpg" alt="" /></a>
@@ -65,8 +64,8 @@
 											Data Visualization
 										</a></h2>
 									</header>
-									<a href="https://public.tableau.com/app/profile/lim.chhayly/viz/CovidDashbaord/Dashboard1" class="image fit"><img src="images/d1.png" alt="" /></a>
-									<p>In this project, we used a Tableau desktop to visualized a COVID-19 global infections, and deaths cases.</p>
+									<a href="https://public.tableau.com/app/profile/lim.chhayly/viz/CovidDashbaord/Dashboard1" class="image fit"><img src="images/covid-viz.jpg" alt="" /></a>
+									<p>In this project, we visualize data of global Coronavirus infection rates, and deaths rates by using a Tableau desktop.</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/lim.chhayly/viz/CovidDashbaord/Dashboard1" class="button">View Project</a></li>
 									</ul>
@@ -76,8 +75,9 @@
 										<h2><a href="https://public.tableau.com/app/profile/lim.chhayly/viz/CommericalBuildingsPowerConsumptions/PowerConsumption">ELECTRICITY POWER
 										<br/>DATA VISUALIZATION</a></h2>
 									</header>
-									<a href="https://public.tableau.com/app/profile/lim.chhayly/viz/CommericalBuildingsPowerConsumptions/PowerConsumption" class="image fit"><img src="images/PowerConsumption.png" alt="" /></a>
-									<p>In this project, we had visualized an electricity power consumptions of commerical buildings in the United States.</p>
+									<a href="https://public.tableau.com/app/profile/lim.chhayly/viz/CommericalBuildingsPowerConsumptions/PowerConsumption" class="image fit"><img src="images/power-viz.jpg" alt="" /></a>
+									<p>
+										In this project, we visualize the electricity consumption data of retail and office buildings. The visualization shows a trend and pattern of data that can be used for forecasting.</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/lim.chhayly/viz/CommericalBuildingsPowerConsumptions/PowerConsumption" class="button">View Project</a></li>
 									</ul>
@@ -88,7 +88,7 @@
 										Data Exploration</a></h2>
 									</header>
 									<a href="https://github.com/Cly1st/PortfortlioProjects/blob/main/Covid%20Portforlio%20Project.sql" class="image fit"><img src="images/covid-19.jpg" alt="" /></a>
-									<p>We used SQL and SQL Server to explore global COVID-19 data.</p>
+									<p>Explore data of global COVID-19 infection rates, vaccination rates, and death rates by using a SQL along with SQL Server.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Cly1st/PortfortlioProjects/blob/main/Covid%20Portforlio%20Project.sql" class="button">View Project</a></li>
 									</ul>
@@ -99,7 +99,8 @@
 										Data Exploration</a></h2>
 									</header>
 									<a href="https://github.com/Cly1st/Visualizations-Power-Usage" class="image fit"><img src="images/power.jpg" alt="" /></a>
-									<p>We used Python and Jupyter Notebook to explore a electricity power consumptions of commerical buildings.</p>
+									<p>Explore a behavior of electricity usage between retail building and office building by using a Python and Jupyter-Notebook.
+									</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Cly1st/Visualizations-Power-Usage" class="button">View Project</a></li>
 									</ul>
@@ -110,7 +111,7 @@
 										Classification</a></h2>
 									</header>
 									<a href="https://github.com/Cly1st/ECG-Arrhythmia-Classification-using-Artificial-Neural-Network" class="image fit"><img src="images/ecg.jpg" alt="" /></a>
-									<p>We had classified a five types of electrocardiogram signals (heart diseases) by used a machine learning technique.</p>
+									<p>Early identify heart diseases can help clinical lower a fatality rate of a patient and different heart disease needs different treatments. The most common and popular approach use for detecting heart diseases is deep learning apply to classify and detect electrocardiogram signals of patients. In this project, a deep neural network technique is applied to distinguish between five classes of heart diseases.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Cly1st/ECG-Arrhythmia-Classification-using-Artificial-Neural-Network" class="button">View Project</a></li>
 									</ul>
@@ -121,7 +122,7 @@
 										Forecasting</a></h2>
 									</header>
 									<a href="https://github.com/Cly1st/Commercial-Building-Power-Consumption-Forecasting/blob/main/Power_Forecasting/src/train.ipynb" class="image fit"><img src="images/green.jpg" alt="" /></a>
-									<p>Forecast an electricity power consumptions of commerical buildings by used a simple deep learning LSTM model.</p>
+									<p>Predict the future of electric power usage is useful. It can help prevent a power loss or failure which could happen by over or lower supply the power to meet a demand of the consumer. Furthermore, it also can save consumer and supplier costs of electricity as well. In this project, a deep learning (LSTM network) approach is applied to forecast the electric power consumption of commercial buildings in the United States.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Cly1st/Commercial-Building-Power-Consumption-Forecasting/blob/main/Power_Forecasting/src/train.ipynb" class="button">View Project</a></li>
 									</ul>
