--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 					<footer id="footer">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>O Bek Ka Om, Sen Sok, Phnom Pen</p>
+								<p>O Bek Ka Om, Sen Sok, Phnom Penh</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
