--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Lim Chhayly<br />
 						Portfolio</h1>
-						<p>Personal website for demostrate my skills in Python, SQL, Tableau, and Machine Learning <a href="https://github.com/Cly1st?tab=repositories"><br/>@LimChhayly	</a></p>
+						<p>Personal website for demonstrate my skills in Python, SQL, Tableau, and Machine Learning<a href="https://github.com/Cly1st?tab=repositories"><br/>@LimChhayly	</a></p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
