--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>My Portfolio</title>
+		<title>Lim Chhayly</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,20 +19,20 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Lim Chhayly<br />
-						Portfolio</h1>
-						<p>Personal website for demonstrate my skills in Python, SQL, Tableau, and Machine Learning<a href="https://github.com/Cly1st?tab=repositories"><br/>@LimChhayly	</a></p>
+						<h2>Lim Chhayly</h2>
+						<p>Welcome to my personal web<a href="https://github.com/Cly1st?tab=repositories"><br/>@Lim Chhayly</a></p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
 					</div>
 
-
-
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">Projects</a></li>
+							<li class="active"><a href="index.html">About me</a></li>
+							<li class="inactive"><a href="publications.html">Publications</a></li>
+							<li class="inactive"><a href="projects.html">Projects</a></li>
+							<li class="inactive"><a href="CV.html">Curriculum Vitae</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/lim-chhayly-97ab2510b/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
@@ -42,100 +42,32 @@
 
 				<!-- Main -->
 					<div id="main">
-
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-
-									<h2><a href="#">About me<br />
-									</a></h2>
-									<p>I was a student researcher who received a scholarship to study at Soonchunhyang University (South Korea) in the Department of ICT Convergence. During two years of my master's degree, I have spent most of my time doing projects related to data analysis, data visualization, machine learning, and review scientific journal papers.
+									<img src="images/me.jfif" width="150" height="150">
+									<h3>About me</h3>
+									<p>
+										Currently, I am working at the <a href="https://mptc.gov.kh/en/">Ministry of Post and Telecommunication</a> (Cambodia)
+										, as an AI Engineer which research focusing on computer vision and machine learning. From Sep-2021, I served as a 
+										senior, report developer at <a href="https://www.amret.com.kh/">Amret Microfinance Institution</a>, my role is to translate the data
+										into non-technical term reports for the stakeholders. Between Sep-2019 and Aug-2021, I was a student researcher at 
+										<a href="http://se.sch.ac.kr/xe/newuc/new_uc_home/index.html">UC Laboratory - Soonchunhyang University</a>, my research is focused on
+										embedded health devices, signal processing, time series analysis, and machine learning.
 									</p>
 								</header>
-								<a href="#" class="image main"><img src="images/me.jpg" alt="" /></a>
+								
 							</article>
 
 						<!-- Posts -->
-							<section class="posts">
-								<article>
-									<header>
-
-										<h2><a href="https://public.tableau.com/app/profile/lim.chhayly/viz/CovidDashbaord/Dashboard1">COVID-19<br />
-											Data Visualization
-										</a></h2>
-									</header>
-									<a href="https://public.tableau.com/app/profile/lim.chhayly/viz/CovidDashbaord/Dashboard1" class="image fit"><img src="images/covid-viz.jpg" alt="" /></a>
-									<p>In this project, we visualize data of global Coronavirus infection rates, and deaths rates by using a Tableau desktop.</p>
-									<ul class="actions special">
-										<li><a href="https://public.tableau.com/app/profile/lim.chhayly/viz/CovidDashbaord/Dashboard1" class="button">View Project</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2><a href="https://public.tableau.com/app/profile/lim.chhayly/viz/CommericalBuildingsPowerConsumptions/PowerConsumption">ELECTRICITY POWER
-										<br/>DATA VISUALIZATION</a></h2>
-									</header>
-									<a href="https://public.tableau.com/app/profile/lim.chhayly/viz/CommericalBuildingsPowerConsumptions/PowerConsumption" class="image fit"><img src="images/power-viz.jpg" alt="" /></a>
-									<p>
-										In this project, we visualize the electricity consumption data of retail and office buildings. The visualization shows a trend and pattern of data that can be used for forecasting.</p>
-									<ul class="actions special">
-										<li><a href="https://public.tableau.com/app/profile/lim.chhayly/viz/CommericalBuildingsPowerConsumptions/PowerConsumption" class="button">View Project</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2><a href="https://github.com/Cly1st/PortfortlioProjects/blob/main/Covid%20Portforlio%20Project.sql">Covid-19<br />
-										Data Exploration</a></h2>
-									</header>
-									<a href="https://github.com/Cly1st/PortfortlioProjects/blob/main/Covid%20Portforlio%20Project.sql" class="image fit"><img src="images/covid-19.jpg" alt="" /></a>
-									<p>Explore data of global COVID-19 infection rates, vaccination rates, and death rates by using a SQL along with SQL Server.</p>
-									<ul class="actions special">
-										<li><a href="https://github.com/Cly1st/PortfortlioProjects/blob/main/Covid%20Portforlio%20Project.sql" class="button">View Project</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2><a href="https://github.com/Cly1st/Visualizations-Power-Usage">Electricity Power<br />
-										Data Exploration</a></h2>
-									</header>
-									<a href="https://github.com/Cly1st/Visualizations-Power-Usage" class="image fit"><img src="images/power.jpg" alt="" /></a>
-									<p>Explore a behavior of electricity usage between retail building and office building by using a Python and Jupyter-Notebook.
-									</p>
-									<ul class="actions special">
-										<li><a href="https://github.com/Cly1st/Visualizations-Power-Usage" class="button">View Project</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2><a href="https://github.com/Cly1st/ECG-Arrhythmia-Classification-using-Artificial-Neural-Network">Heart Diseases<br />
-										Classification</a></h2>
-									</header>
-									<a href="https://github.com/Cly1st/ECG-Arrhythmia-Classification-using-Artificial-Neural-Network" class="image fit"><img src="images/ecg.jpg" alt="" /></a>
-									<p>Early identify heart diseases can help clinical lower a fatality rate of a patient and different heart disease needs different treatments. The most common and popular approach use for detecting heart diseases is deep learning apply to classify and detect electrocardiogram signals of patients. In this project, a deep neural network technique is applied to distinguish between five classes of heart diseases.</p>
-									<ul class="actions special">
-										<li><a href="https://github.com/Cly1st/ECG-Arrhythmia-Classification-using-Artificial-Neural-Network" class="button">View Project</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2><a href="https://github.com/Cly1st/Commercial-Building-Power-Consumption-Forecasting/blob/main/Power_Forecasting/src/train.ipynb">Electricity Power<br />
-										Forecasting</a></h2>
-									</header>
-									<a href="https://github.com/Cly1st/Commercial-Building-Power-Consumption-Forecasting/blob/main/Power_Forecasting/src/train.ipynb" class="image fit"><img src="images/green.jpg" alt="" /></a>
-									<p>Predict the future of electric power usage is useful. It can help prevent a power loss or failure which could happen by over or lower supply the power to meet a demand of the consumer. Furthermore, it also can save consumer and supplier costs of electricity as well. In this project, a deep learning (LSTM network) approach is applied to forecast the electric power consumption of commercial buildings in the United States.</p>
-									<ul class="actions special">
-										<li><a href="https://github.com/Cly1st/Commercial-Building-Power-Consumption-Forecasting/blob/main/Power_Forecasting/src/train.ipynb" class="button">View Project</a></li>
-									</ul>
-								</article>
-							</section>
-						
+							<section class="posts">						
 					</div>
 
 				<!-- Footer -->
 					<footer id="footer">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>O Bek Ka Om, Sen Sok, Phnom Penh</p>
+								<p>Phnom Penh, Cambodia</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
@@ -154,7 +86,6 @@
 							</section>
 						</section>
 					</footer>
-
 			</div>
 
 		<!-- Scripts -->
