--- a/CV.html
+++ b/CV.html
@@ -47,7 +47,7 @@
 								<header class="major">
 									<h3>Curriculum Vitae</h3>
 									<p>
-										<a href="https://drive.google.com/file/d/1awyb1HfTeGQs0MB6rb3sABsnxLvonv9r/view?usp=sharing">CV 2022</a>
+										<a href="https://drive.google.com/file/d/1gbT5F_Bp9Hgnqr43ktE3LSDA_lHudRRL/view?usp=share_link">CV 2023</a>
 									</p>
 								</header>
 								
