--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h2>Lim Chhayly</h2>
-						<p>Welcome to my personal web<a href="https://github.com/Cly1st?tab=repositories"><br/>@Lim Chhayly</a></p>
+						<p>Welcome to my personal blog<a href="https://github.com/Cly1st?tab=repositories"><br/>@Lim Chhayly</a></p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -57,11 +57,11 @@
 									<img src="images/me.jfif" width="150" height="150">
 									<h3>About me</h3>
 									<p>
-										Currently, I am working at the <a href="https://mptc.gov.kh/en/">Ministry of Post and Telecommunication</a> (Cambodia)
-										, as an AI Engineer which research focusing on computer vision and machine learning. From Sep-2021, I served as a 
+										Currently, I am working at the <a href="https://dgc.gov.kh/">Digital Government Committee</a> (Cambodia)
+										, as a Senior Software Engineer which research focus on apply machine learning algorithms. From 2021 to 2022, I served as a 
 										senior, report developer at <a href="https://www.amret.com.kh/">Amret Microfinance Institution</a>, my role is to translate the data
-										into non-technical term reports for the stakeholders. Between Sep-2019 and Aug-2021, I was a student researcher at 
-										<a href="http://se.sch.ac.kr/xe/newuc/new_uc_home/index.html">UC Laboratory - Soonchunhyang University</a>, my research is focused on
+										into non-technical term reports for the stakeholders. Between 2019 and 2021, I was a student researcher at 
+										<a href="http://se.sch.ac.kr/xe/newuc/new_uc_home/index.html">UC Laboratory - Soonchunhyang University</a> (South Korea), my research is focused on
 										embedded health devices, signal processing, time series analysis, and machine learning.
 									</p>
 								</header>
@@ -84,6 +84,7 @@
 							</section>
 							<section>
 								<h3>Email</h3>
+								<p><a href="#">l.chhayly@dgc.gov.kh</a></p>
 								<p><a href="#">chaylylim@gmail.com</a></p>
 							</section>
 							<section>
