--- a/index.html
+++ b/index.html
@@ -1,111 +1,197 @@
-<!DOCTYPE HTML>
-<!--
-	Massively by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
-	<head>
-		<title>Lim Chhayly</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<!-- Google tag (gtag.js) -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-L1QV1RYB3D"></script>
-	<script>
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('js', new Date());
+<!DOCTYPE html>
+<html lang="en" class="scroll-smooth">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chhayly Lim - Personal Portfolio</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+        }
+        .section {
+            scroll-margin-top: 64px; /* Adjust for fixed header height */
+        }
+    </style>
+</head>
+<body class="bg-gray-900 text-gray-100">
 
-	gtag('config', 'G-L1QV1RYB3D');
-	</script>
-	<body class="is-preload">
+    <!-- Header -->
+    <header class="bg-gray-800/80 backdrop-blur-sm fixed top-0 left-0 right-0 z-50">
+        <div class="container mx-auto px-6 py-4 flex justify-between items-center">
+            <a href="#" class="text-2xl font-bold text-white">Chhayly Lim</a>
+            <nav class="flex space-x-8">
+                <a href="#about" class="text-gray-300 hover:text-white transition duration-300">About</a>
+                <a href="#projects" class="text-gray-300 hover:text-white transition duration-300">Projects</a>
+                <a href="#publications" class="text-gray-300 hover:text-white transition duration-300">Publications</a>
+                <a href="#contact" class="text-gray-300 hover:text-white transition duration-300">Contact</a>
+            </nav>
+            <div class="flex items-center space-x-4">
+                <a href="https://github.com/Cly1st" target="_blank" rel="noopener noreferrer" class="text-gray-300 hover:text-white transition duration-300">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.91 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
+                </a>
+                <a href="https://www.linkedin.com/in/chhaylylim/" target="_blank" rel="noopener noreferrer" class="text-gray-300 hover:text-white transition duration-300">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
+                </a>
+            </div>
+            <button id="mobile-menu-button" class="md:hidden focus:outline-none">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path></svg>
+            </button>
+        </div>
+        <!-- Mobile Menu -->
+        <div id="mobile-menu" class="hidden md:hidden">
+            <a href="#about" class="block py-2 px-4 text-sm hover:bg-gray-700">About</a>
+            <a href="#projects" class="block py-2 px-4 text-sm hover:bg-gray-700">Projects</a>
+            <a href="#contact" class="block py-2 px-4 text-sm hover:bg-gray-700">Contact</a>
+        </div>
+    </header>
 
-		<!-- Wrapper -->
-			<div id="wrapper" class="fade-in">
+    <main class="pt-16">
+        <!-- Hero Section -->
+        <section id="hero" class="bg-gray-900 text-white text-center py-20 md:py-32">
+            <div class="container mx-auto px-6">
+                <img src="images/me.jfif" alt="Chhayly Lim" class="w-32 h-32 md:w-40 md:h-40 mx-auto rounded-full mb-6 border-4 border-indigo-500 shadow-lg" onerror="this.onerror=null;this.src='https://placehold.co/150x150/667eea/ffffff?text=CL';">
+                <h1 class="text-4xl md:text-6xl font-extrabold leading-tight mb-4">Hi, I'm Chhayly</h1>
+                <p class="text-lg md:text-2xl text-gray-300">AI/Software Engineer & Educator</p>
+                <p class="text-lg md:text-1xl text-gray-300">I build things for humanity</p>
+                <a href="#projects" class="mt-8 inline-block bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 px-6 rounded-lg transition duration-300">View My Work</a>
+            </div>
+        </section>
 
-				<!-- Intro -->
-					<div id="intro">
-						<h2>Lim Chhayly</h2>
-						<p>Welcome to my personal blog<a href="https://github.com/Cly1st?tab=repositories"><br/>@Lim Chhayly</a></p>
-						<ul class="actions">
-							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
-						</ul>
-					</div>
+        <!-- About Section -->
+        <section id="about" class="section py-20 bg-gray-800">
+            <div class="container mx-auto px-6">
+                <h2 class="text-3xl font-bold text-center mb-12">About Me</h2>
+                <div class="flex flex-col md:flex-row items-center gap-12">
+                    <div class="md:w-2/3 text-lg leading-relaxed text-gray-300">
+                        <p class="mb-4">
+                            Hello! I'm Chhayly, a passionate and motivated AI professional and Software Engineer. I specialize in researching and developing machine learning models for real-world applications, including eKYC systems, large language models, and computer vision for smart traffic solutions.
+                        </p>
+                        <p class="mb-4">
+                           I enjoy tackling complex challenges and turning data into actionable insights. My goal is to leverage my expertise in AI to solve key challenges in fraud detection, operational efficiency, and enhancing user experiences.
+                        </p>
+                        <p>
+                            When I'm not coding, you can find me exploring new technologies, contributing to open-source projects, or enjoying a good book.
+                        </p>
+                    </div>
+                    <div class="md:w-1/3">
+                        <h3 class="text-2xl font-semibold mb-4 text-white">My Skills</h3>
+                        <div class="flex flex-wrap gap-2">
+                            <span class="bg-indigo-500 text-white text-sm font-medium px-3 py-1 rounded-full">Python</span>
+                            <span class="bg-indigo-500 text-white text-sm font-medium px-3 py-1 rounded-full">SQL</span>
+                            <span class="bg-indigo-500 text-white text-sm font-medium px-3 py-1 rounded-full">TensorFlow</span>
+                            <span class="bg-indigo-500 text-white text-sm font-medium px-3 py-1 rounded-full">PyTorch</span>
+                            <span class="bg-indigo-500 text-white text-sm font-medium px-3 py-1 rounded-full">Scikit-learn</span>
+                            <span class="bg-indigo-500 text-white text-sm font-medium px-3 py-1 rounded-full">OpenCV</span>
+                            <span class="bg-indigo-500 text-white text-sm font-medium px-3 py-1 rounded-full">Pandas</span>
+                            <span class="bg-indigo-500 text-white text-sm font-medium px-3 py-1 rounded-full">Power BI</span>
+                            <span class="bg-indigo-500 text-white text-sm font-medium px-3 py-1 rounded-full">Docker</span>
+                            <span class="bg-indigo-500 text-white text-sm font-medium px-3 py-1 rounded-full">Kubernetes</span>
+                            <span class="bg-indigo-500 text-white text-sm font-medium px-3 py-1 rounded-full">Git & GitHub</span>
+                             <span class="bg-indigo-500 text-white text-sm font-medium px-3 py-1 rounded-full">AWS</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-				<!-- Nav -->
-					<nav id="nav">
-						<ul class="links">
-							<li class="active"><a href="index.html">About me</a></li>
-							<li class="inactive"><a href="publications.html">Publications</a></li>
-							<li class="inactive"><a href="projects.html">Projects</a></li>
-							<li class="inactive"><a href="CV.html">Curriculum Vitae</a></li>
-						</ul>
-						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/lim-chhayly-97ab2510b/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
-							<li><a href="https://github.com/Cly1st?tab=repositories" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-						</ul>
-					</nav>
+        <!-- Projects Section -->
+        <section id="projects" class="section py-20 bg-gray-900">
+            <div class="container mx-auto px-6">
+                <h2 class="text-3xl font-bold text-center mb-12">My Top Projects</h2>
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+                    <!-- Project Card 1 -->
+                    <div class="bg-gray-800 rounded-lg overflow-hidden shadow-lg transform hover:scale-105 transition duration-500">
+                        <img src="https://placehold.co/600x400/3c3c3c/ffffff?text=ECG+Classification" alt="ECG Arrhythmia Classification Project" class="w-full h-56 object-cover">
+                        <div class="p-6">
+                            <h3 class="text-xl font-bold mb-2">ECG Arrhythmia Classification</h3>
+                            <p class="text-gray-400 mb-4">Classified arrhythmia heartbeats from the MIT-BIH Database using a 1D-CNN, achieving over 90% accuracy.</p>
+                            <a href="https://github.com/Cly1st/ECG-Arrhythmia-Classification-using-Artificial-Neural-Network" target="_blank" rel="noopener noreferrer" class="text-indigo-400 hover:text-indigo-300 font-semibold">View on GitHub &rarr;</a>
+                        </div>
+                    </div>
+                    <!-- Project Card 2 -->
+                    <div class="bg-gray-800 rounded-lg overflow-hidden shadow-lg transform hover:scale-105 transition duration-500">
+                        <img src="https://placehold.co/600x400/3c3c3c/ffffff?text=Smart+Traffic" alt="Smart Traffic Management Project" class="w-full h-56 object-cover">
+                        <div class="p-6">
+                            <h3 class="text-xl font-bold mb-2">Smart Traffic Management</h3>
+                            <p class="text-gray-400 mb-4">Prototyped a system using Computer Vision for vehicle detection, traffic flow analysis, and incident detection.</p>
+                            <a href="https://github.com/Cly1st" target="_blank" rel="noopener noreferrer" class="text-indigo-400 hover:text-indigo-300 font-semibold">View on GitHub &rarr;</a>
+                        </div>
+                    </div>
+                    <!-- Project Card 3 -->
+                    <div class="bg-gray-800 rounded-lg overflow-hidden shadow-lg transform hover:scale-105 transition duration-500">
+                        <img src="https://placehold.co/600x400/3c3c3c/ffffff?text=Power+Forecast" alt="Power Consumption Forecasting Project" class="w-full h-56 object-cover">
+                        <div class="p-6">
+                            <h3 class="text-xl font-bold mb-2">Power Consumption Forecasting</h3>
+                            <p class="text-gray-400 mb-4">Build and train a simple LSTM model for forecasting a power consumption of commerical building and house hold.</p>
+                            <a href="https://github.com/Cly1st/Commercial-Building-Power-Consumption-Forecasting" target="_blank" rel="noopener noreferrer" class="text-indigo-400 hover:text-indigo-300 font-semibold">View on GitHub &rarr;</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-				<!-- Main -->
-					<div id="main">
-						<!-- Featured Post -->
-							<article class="post featured">
-								<header class="major">
-									<img src="images/me.jfif" width="150" height="150">
-									<h3>About me</h3>
-									<p>
-										Currently, I am working at the <a href="https://dgc.gov.kh/">Digital Government Committee</a> (Cambodia)
-										, as a Senior Software Engineer which research focus on apply machine learning algorithms. From 2021 to 2022, I served as a 
-										senior, report developer at <a href="https://www.amret.com.kh/">Amret Microfinance Institution</a>, my role is to translate the data
-										into non-technical term reports for the stakeholders. Between 2019 and 2021, I was a student researcher at 
-										<a href="http://se.sch.ac.kr/xe/newuc/new_uc_home/index.html">UC Laboratory - Soonchunhyang University</a> (South Korea), my research is focused on
-										embedded health devices, signal processing, time series analysis, and machine learning.
-									</p>
-								</header>
-								
-							</article>
+        <!-- Publications Section -->
+        <section id="publications" class="section py-20 bg-gray-800">
+            <div class="container mx-auto px-6">
+                <h2 class="text-3xl font-bold text-center mb-12">Publications</h2>
+                <div class="max-w-3xl mx-auto">
+                    <div class="bg-gray-900 p-6 rounded-lg shadow-lg mb-6">
+                        <p class="text-gray-300 leading-relaxed">
+                            Lim, C., Kim, J., Kim, J., Kang, B. G., & Nam, Y. (2022). Estimation of respiratory rate in various environments using microphones embedded in face masks. <em>The Journal of Supercomputing</em>, 1-18.
+                        </p>
+                    </div>
+                    <div class="bg-gray-900 p-6 rounded-lg shadow-lg">
+                        <p class="text-gray-300 leading-relaxed">
+                            Lim, C., Kim, J. Y., & Nam, Y. (2020, December). ECG signal analysis for patient with metabolic syndrome based on 1D-convolution neural network. In <em>2020 International Conference on Computational Science and Computational Intelligence (CSCI)</em> (pp. 731-733). IEEE.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-						<!-- Posts -->
-							<section class="posts">						
-					</div>
+        <!-- Contact Section -->
+        <section id="contact" class="section py-20 bg-gray-800">
+            <div class="container mx-auto px-6 max-w-lg text-center">
+                <h2 class="text-3xl font-bold mb-6">Get In Touch</h2>
+                <p class="text-gray-400 mb-8">
+                    I'm currently open to new opportunities. If you have a project in mind or just want to say hi, feel free to reach out!
+                </p>
+                <a href="mailto:chaylylim@gmail.com" class="inline-block bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-4 px-8 rounded-lg transition duration-300 text-lg">
+                    Say Hello
+                </a>
+            </div>
+        </section>
+    </main>
 
-				<!-- Footer -->
-					<footer id="footer">
-							<section class="alt">
-								<h3>Address</h3>
-								<p>Phnom Penh, Cambodia</p>
-							</section>
-							<section>
-								<h3>Phone</h3>
-								<p><a href="#">011-700-210</a></p>
-							</section>
-							<section>
-								<h3>Email</h3>
-								<p><a href="#">l.chhayly@dgc.gov.kh</a></p>
-								<p><a href="#">chaylylim@gmail.com</a></p>
-							</section>
-							<section>
-								<h3>Social</h3>
-								<ul class="icons alt">
-									<li><a href="https://www.linkedin.com/in/chhaylylim/" class="icon brands alt fa-linkedin"><span class="label">Twitter</span></a></li>
-									<li><a href="https://github.com/Cly1st" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
-							</section>
-						</section>
-					</footer>
-			</div>
+    <!-- Footer -->
+    <footer class="bg-gray-900 py-8">
+        <div class="container mx-auto px-6 text-center text-gray-500">
+            <div class="flex justify-center space-x-6 mb-4">
+                <a href="https://github.com/Cly1st" target="_blank" rel="noopener noreferrer" class="hover:text-white transition duration-300">GitHub</a>
+                <a href="https://www.linkedin.com/in/chhaylylim/" target="_blank" rel="noopener noreferrer" class="hover:text-white transition duration-300">LinkedIn</a>
+            </div>
+            <p>&copy; 2025 Chhayly Lim. All Rights Reserved.</p>
+        </div>
+    </footer>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+    <script>
+        // Mobile menu toggle
+        const mobileMenuButton = document.getElementById('mobile-menu-button');
+        const mobileMenu = document.getElementById('mobile-menu');
 
-	</body>
+        mobileMenuButton.addEventListener('click', () => {
+            mobileMenu.classList.toggle('hidden');
+        });
+
+        // Close mobile menu when a link is clicked
+        const mobileMenuLinks = mobileMenu.querySelectorAll('a');
+        mobileMenuLinks.forEach(link => {
+            link.addEventListener('click', () => {
+                mobileMenu.classList.add('hidden');
+            });
+        });
+    </script>
+</body>
 </html>
