--- a/index.html
+++ b/index.html
@@ -1,55 +1,7 @@
-<!DOCTYPE html>
-<html lang="en" class="scroll-smooth">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chhayly Lim - Personal Portfolio</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-        }
-        .section {
-            scroll-margin-top: 64px; /* Adjust for fixed header height */
-        }
-    </style>
-</head>
-<body class="bg-gray-900 text-gray-100">
-
-    <!-- Header -->
-    <header class="bg-gray-800/80 backdrop-blur-sm fixed top-0 left-0 right-0 z-50">
-        <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <a href="#" class="text-2xl font-bold text-white">Chhayly Lim</a>
-            <nav class="flex space-x-8">
-                <a href="#about" class="text-gray-300 hover:text-white transition duration-300">About</a>
-                <a href="#projects" class="text-gray-300 hover:text-white transition duration-300">Projects</a>
-                <a href="/blog" class="text-gray-300 hover:text-white transition duration-300">Blog</a>
-                <a href="#publications" class="text-gray-300 hover:text-white transition duration-300">Publications</a>
-                <a href="#contact" class="text-gray-300 hover:text-white transition duration-300">Contact</a>
-            </nav>
-            <div class="flex items-center space-x-4">
-                <a href="https://github.com/Cly1st" target="_blank" rel="noopener noreferrer" class="text-gray-300 hover:text-white transition duration-300">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.91 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
-                </a>
-                <a href="https://www.linkedin.com/in/chhaylylim/" target="_blank" rel="noopener noreferrer" class="text-gray-300 hover:text-white transition duration-300">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
-                </a>
-            </div>
-            <button id="mobile-menu-button" class="md:hidden focus:outline-none">
-                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path></svg>
-            </button>
-        </div>
-        <!-- Mobile Menu -->
-        <div id="mobile-menu" class="hidden md:hidden">
-            <a href="#about" class="block py-2 px-4 text-sm hover:bg-gray-700">About</a>
-            <a href="#projects" class="block py-2 px-4 text-sm hover:bg-gray-700">Projects</a>
-            <a href="/blog" class="block py-2 px-4 text-sm hover:bg-gray-700">Blog</a>
-            <a href="#publications" class="block py-2 px-4 text-sm hover:bg-gray-700">Publications</a>
-            <a href="#contact" class="block py-2 px-4 text-sm hover:bg-gray-700">Contact</a>
-        </div>
-    </header>
-
+---
+layout: default
+title: Home
+---
     <main class="pt-16">
         <!-- Hero Section -->
         <section id="hero" class="bg-gray-900 text-white text-center py-20 md:py-32">
@@ -69,13 +21,13 @@
                 <div class="flex flex-col md:flex-row items-center gap-12">
                     <div class="md:w-2/3 text-lg leading-relaxed text-gray-300">
                         <p class="mb-4">
-                            Hello! I'm Chhayly, a passionate and motivated AI professional and Software Engineer. I specialize in researching and developing machine learning models for real-world applications, including eKYC systems, large language models, and computer vision for smart traffic solutions.
+                            A passionate and motivated AI professional and Software Engineer. I specialize in researching and developing machine learning models for real-world applications, including eKYC systems, large language models, and computer vision for smart traffic solutions.
                         </p>
                         <p class="mb-4">
-                           I enjoy tackling complex challenges and turning data into actionable insights. My goal is to leverage my expertise in AI to solve key challenges in fraud detection, operational efficiency, and enhancing user experiences.
+                           I enjoy tackling complex challenges and turning data into actionable insights.
                         </p>
                         <p>
-                            When I'm not coding, you can find me exploring new technologies, contributing to open-source projects, or enjoying a good book.
+                            When I'm not coding, you can find me exploring new technologies, contributing to open-source projects, or enjoying a good music.
                         </p>
                     </div>
                     <div class="md:w-1/3">
@@ -167,17 +119,6 @@
             </div>
         </section>
     </main>
-
-    <!-- Footer -->
-    <footer class="bg-gray-900 py-8">
-        <div class="container mx-auto px-6 text-center text-gray-500">
-            <div class="flex justify-center space-x-6 mb-4">
-                <a href="https://github.com/Cly1st" target="_blank" rel="noopener noreferrer" class="hover:text-white transition duration-300">GitHub</a>
-                <a href="https://www.linkedin.com/in/chhaylylim/" target="_blank" rel="noopener noreferrer" class="hover:text-white transition duration-300">LinkedIn</a>
-            </div>
-            <p>&copy; 2025 Chhayly Lim. All Rights Reserved.</p>
-        </div>
-    </footer>
 
     <script>
         // Mobile menu toggle
